--- a/website/css/murray-machinery.css
+++ b/website/css/murray-machinery.css
@@ -91,11 +91,13 @@
       .content .large-cta {
         display: block;
         background: #cccccc;
-        font-size: 2.0em; }
+        font-size: 2.0em;
+        text-align: center; }
         .content .large-cta a {
+          padding: 10px 15px 8px 15px;
           display: block; }
           .content .large-cta a i {
-            right: 10px; } }
+            position: static; } }
   @media (max-width: 1200px) {
     .content .container {
       padding-right: 0;
